--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <p>Creemos que las <strong>empresas del futuro</strong> deben tener la sostenibilidad incorporada en su ADN.</p>
         <p>Trabajamos con <strong>innovación</strong>, <strong>desarrollo sostenible</strong> y <strong>economía circular</strong> como pilares.</p>
       </div>  
-      <p id="creamos">Creamos <strong>círculos virtuosos</strong> donde todos los involucrados se convierten en <strong>actor sociales comprometidos y responsables</strong> con el ambiente y sus stakeholders.</p>
+      <p id="creamos">Creamos <strong>círculos virtuosos</strong> donde todos los involucrados se convierten en <strong>actores sociales comprometidos y responsables</strong> con el ambiente y sus stakeholders.</p>
     </div>        
   </section>		 	 
 	<section>
