--- a/contacto.html
+++ b/contacto.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-lg header-redes ml-4"></i></a>
+                <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-lg header-redes" id="instagram"></i></a>
               </li>
               <li class="nav-item">
                 <a href="https://es-es.facebook.com/3RIDEAS" class="nav-link"><i class="fab fa-facebook-square text-secondary fa-lg header-redes"></i></a>
