--- a/nosotros.html
+++ b/nosotros.html
@@ -34,7 +34,7 @@
         				<a class="nav-link" href="contacto.html">Contacto</a>
         			</li>
               <li class="nav-item">
-                <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-lg header-redes ml-4"></i></a>
+                <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-lg header-redes" id="instagram"></i></a>
               </li>
               <li class="nav-item">
                 <a href="https://es-es.facebook.com/3RIDEAS" class="nav-link"><i class="fab fa-facebook-square text-secondary fa-lg header-redes"></i></a>
@@ -55,14 +55,14 @@
         <h1 id="nosotros"><strong>Sobre nosotros</strong></h1>
         <div class="grid-parrafo">
           <div id="p-izquierda">
-            <p><strong>3R Ideas</strong> es una <strong>Consultora de Sustentabilidad y Comunicación</strong> nacida de la pasión y el compromiso de sus dos directores por construir un mundo mejor, ambiental y socialmente equilibrado.</p>
+            <p><strong>3R Ideas</strong> es una <strong>Consultora de Sustentabilidad y Comunicación</strong> nacida de la pasión y el compromiso de sus directores por construir un mundo mejor, ambiental y socialmente equilibrado.</p>
             <p>Creemos en el poder de las personas para <strong>transformar las organizaciones</strong>. Por eso trabajamos con los distintos niveles de colaboradores para diseñar, proyectar y comunicar los cambios que cada una necesita.</p>
-            <p>Impulsamos un <strong>cambio de visión</strong> para poner la <strong>sustentabilidad como punto de partida</strong> y motor a la hora de pensar los proyectos, seleccionar las materias primas y proveedores, definir y realizar procesos, y vincularse con sus distintos públicos.</p>
+            <p>Impulsamos un <strong>cambio de visión</strong> para poner la <strong>sustentabilidad como punto de partida</strong> y motor a la hora de pensar los proyectos, seleccionar materias primas y proveedores, definir y realizar procesos, y vincularse con sus distintos públicos.</p>
          </div>
           <div id="p-derecha">
             <p class="trabajamos">Trabajamos para llevar la sustentabilidad al corazón de las organizaciones y transformarlas.</p>
             <p>Acompañamos a las organizaciones a <strong>repensar y replantear</strong> los procesos en cada una de las etapas de su cadena de valor para <strong>reducir</strong> su impacto ambiental.</p>
-            <p>Desarrollamos estrategias, programas de sustentabilidad, proyectos de triple impacto y los ayudamos a llegar de la mejor manera a cada uno de sus públicos.</p>
+            <p>Desarrollamos <strong>estrategias, programas de sustentabilidad, proyectos de triple impacto</strong> y los ayudamos a llegar de la mejor manera a cada uno de sus públicos.</p>
             <p class="trabajamos">Trabajamos con <strong>innovación, desarrollo sostenible y economía circular</strong> como pilares.</p>
           </div>
         </div> 
@@ -73,11 +73,11 @@
     		<h2>Juan Manuel Chaname Ciuró Roqué</h2>
     		  <h3 class="text-muted">Fundador y Director</h3> 		  	
     		<img class="directores" src="images/juan-manuel.jpg" alt="juan-manuel" id="juan-manuel">
-    		<p>Es un emprendedor en permanente aprendizaje, con formación en Diseño Industrial y un Posgrado en Ingeniería de Plásticos. Es Project Manager, especialista en gestión y dirección de proyectos. Trabajó en desarrollo de productos con ADN sustentable en China, Alemania e Italia.</p>    
+    		<p>Es un emprendedor en permanente aprendizaje, con formación en Diseño Industrial y un Posgrado en Ingeniería de Plásticos. Es Project Manager, especialista en gestión y dirección de proyectos. Trabajó en desarrollo de productos con ADN sustentable en China, Alemania e Italia. Se desempeña actualmente como Mentor para emprendimientos de impacto social, ambiental y económico.</p>  
     	</div>
       <div id="nosotros-derecha">
     		<h2>Vanina Estrugo
-				  <h3 class="text-muted">Directora</h3>
+				  <h3 class="text-muted">Directora Ejecutiva</h3>
 			   </h2>	  		
     	   <img class="directores" src="images/vanina.jpg" alt="vanina" id="vanina">
     		<p>Emprendedora por naturaleza, es Licenciada en Relaciones Públicas con orientación en Imagen Empresaria, Organizadora de Eventos y Técnica en Ceremonial y Protocolo. Cuenta con más de 17 años de experiencia en el campo de la comunicación y una larga trayectoria en gestión de proyectos. Se dedica a la consultoría y el desarrollo de estrategias integrales para empresas, organismos no gubernamentales y emprendimientos, llevando la innovación y sostenibilidad a la gestión de los negocios.</p>    
