--- a/servicios.html
+++ b/servicios.html
@@ -33,7 +33,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     <li class="nav-item">
-                        <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-lg header-redes ml-4"></i></a>
+                        <a href="https://www.instagram.com/3rideas_/" class="nav-link"><i class="fab fa-instagram text-secondary fa-lg header-redes" id="instagram"></i></a>
                     </li>
                     <li class="nav-item">
                         <a href="https://es-es.facebook.com/3RIDEAS" class="nav-link"><i class="fab fa-facebook-square text-secondary fa-lg header-redes"></i></a>
@@ -50,18 +50,18 @@
   </header>
     <section>
         <div class="servicios-background">
-           <div class="gridIndexServicios">
-                <div class="gridIndexServiciosIzquierda">
-                    <h3 class="tituloIndexServicios mt-5"><strong>Estrategia y Gestión</strong></h3>
-                    <a href="servicios.html#seccionEstrategia"><img src="images/graph.png" class="imagenesIndexServicios mt-2"></a>
+           <div class="gridIndexServicios1">
+                <div class="gridIndexServiciosIzquierda1">
+                    <h3 class="tituloIndexServicios1"><strong>Estrategia y Gestión</strong></h3>
+                    <a href="servicios.html#seccionEstrategia"><img src="images/graph.png" class="imagenesIndexServicios1"></a>
                 </div>
-                <div class="gridIndexServiciosCentro">
-                    <h3 class="tituloIndexServicios mt-5"><strong>Capacitaciones</strong></h3>
-                    <a href="servicios.html#seccionCapacitaciones"><img src="images/training.png" class="imagenesIndexServicios mt-2"></a>
+                <div class="gridIndexServiciosCentro1">
+                    <h3 class="tituloIndexServicios1"><strong>Capacitaciones</strong></h3>
+                    <a href="servicios.html#seccionCapacitaciones"><img src="images/training.png" class="imagenesIndexServicios1"></a>
                 </div>
-                <div class="gridIndexServiciosDerecha">
-                    <h3 class="tituloIndexServicios mt-5"><strong>Comunicación de Impacto</strong></h3>
-                    <a href="servicios.html#seccionComunicacion"><img src="images/shout.png" class="imagenesIndexServicios mt-2"></a>
+                <div class="gridIndexServiciosDerecha1">
+                    <h3 class="tituloIndexServicios1"><strong>Comunicación de Impacto</strong></h3>
+                    <a href="servicios.html#seccionComunicacion"><img src="images/shout.png" class="imagenesIndexServicios2"></a>
                 </div> 
             </div>
         </div>           
@@ -86,6 +86,9 @@
                     </ul>
                 </div>                   
             </div>
+            <div class="consultanos">
+                <a href="contacto.html"><button type="button" class="btn btn-light">Consultanos</button></a> 
+            </div>   
         </div>
         <div id="seccionCapacitaciones">
             <h2 id="capacitaciones"><strong>Capacitaciones</strong></h2>
@@ -100,7 +103,10 @@
                 <div  id="grid-capacitaciones-derecha">
                     <img src="images/presentation.png" class="fotos-servicios img-fluid">
                 </div>         
-            </div>       
+            </div> 
+            <div class="consultanos2">
+              <a href="contacto.html"><button type="button" class="btn btn-light">Consultanos</button></a>     
+            </div>            
         </div>
         <div id="seccionComunicacion">
             <h2 id="comunicacionDeImpacto"><strong>Comunicación de Impacto</strong></h2>
@@ -123,7 +129,10 @@
                         <li>Producción audiovisual.</li>
                     </ul>
                 </div>
-            </div>            
+            </div>
+            <div class="consultanos">
+                <a href="contacto.html"><button type="button" class="btn btn-light">Consultanos</button></a>   
+            </div>                     
         </div>
     </section>
     <footer>
