--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link href="../icofont/icofont.min.css" rel="stylesheet">
   <link href="../boxicons/css/boxicons.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/95df101b02.js" crossorigin="anonymous"></script>	
+  <link rel="icon" href="images/3r-ideas2.png">
 </head>
 <body>	
   <header class="flex-header">
@@ -78,7 +79,7 @@
   <section>
     <div class="gridIndex">
       <div id="indexIzquierda">
-        <img src="images/lightbulb-sun.jpg" alt="manos sosteniendo una planta" id="manosPlanta">
+        <img src="images/lightbulb.jpg" alt="manos sosteniendo una planta" id="manosPlanta">
       </div>
       <div id="indexDerecha">   
         <p>Creemos en el poder de las <strong>personas</strong> para <strong>transformar</strong> las organizaciones.</p>
@@ -120,8 +121,8 @@
       <div id="ft-centro">
         <h3 class="text-light"><strong>3R IDEAS</strong></h3>
         <div class="ft-grid-1">
-          <i class="fas fa-phone-alt text-light ft-redes fa-sm" id="tel-icono"></i><p class="text-white ft-enlaces" id="tel-enlace">+54 911 6141-4804</p>
-          <i class="fas fa-envelope text-light ft-redes fa-sm" id="mail-icono"></i><p class="text-white ft-enlaces" id="mail-enlace">hola@3rideas.com</p>
+          <i class="fas fa-phone-alt text-light ft-redes fa-sm" id="tel-icono"></i><a href="https://api.whatsapp.com/send?phone=+5491161414804"><p class="text-white ft-enlaces" id="tel-enlace">+54 911 6141-4804</p></a>
+          <i class="fas fa-envelope text-light ft-redes fa-sm" id="mail-icono"></i><a href="mailto:hola@3rideas.com" "email me"><p class="text-white ft-enlaces" id="mail-enlace">hola@3rideas.com</p></a> 
           <i class="fas fa-map-marker-alt text-light ft-redes fa-sm" id="map-icono"></i><p class="text-white ft-enlaces" id="map-enlace">Ciudad Autónoma de Buenos Aires | Argentina </p>
         </div>
       </div>   
