--- a/nosotros.html
+++ b/nosotros.html
@@ -92,8 +92,8 @@
       <div id="ft-centro">
         <h3 class="text-light"><strong>3R IDEAS</strong></h3>
         <div class="ft-grid-1">
-          <i class="fas fa-phone-alt text-light ft-redes fa-sm" id="tel-icono"></i><p class="text-white ft-enlaces" id="tel-enlace">+54 911 6141-4804</p>
-          <i class="fas fa-envelope text-light ft-redes fa-sm" id="mail-icono"></i><p class="text-white ft-enlaces" id="mail-enlace">hola@3rideas.com</p>
+          <i class="fas fa-phone-alt text-light ft-redes fa-sm" id="tel-icono"></i><a href="https://api.whatsapp.com/send?phone=+5491161414804"><p class="text-white ft-enlaces" id="tel-enlace">+54 911 6141-4804</p></a>
+          <i class="fas fa-envelope text-light ft-redes fa-sm" id="mail-icono"></i><a href="mailto:hola@3rideas.com" "email me"><p class="text-white ft-enlaces" id="mail-enlace">hola@3rideas.com</p></a> 
           <i class="fas fa-map-marker-alt text-light ft-redes fa-sm" id="map-icono"></i><p class="text-white ft-enlaces" id="map-enlace">Ciudad Autónoma de Buenos Aires | Argentina </p>
         </div>
       </div>   
