--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <section>
     <div class="gridIndex">
       <div id="indexIzquierda">
-        <img src="images/lightbulb.jpg" alt="manos sosteniendo una planta" id="manosPlanta">
+        <img src="images/lightbulb.jpg" alt="" id="manosPlanta">
       </div>
       <div id="indexDerecha">   
         <p>Creemos en el poder de las <strong>personas</strong> para <strong>transformar</strong> las organizaciones.</p>
