--- a/servicios.html
+++ b/servicios.html
@@ -101,7 +101,7 @@
                     </ul>
                 </div>   
                 <div  id="grid-capacitaciones-derecha">
-                    <img src="images/presentation.png" class="fotos-servicios img-fluid">
+                    <img src="images/presentation.png" class="fotos-servicios img-fluid" id="ilus-capacitaciones">
                 </div>         
             </div> 
             <div class="consultanos2">
