--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link href="../boxicons/css/boxicons.min.css" rel="stylesheet">
   <script src="https://kit.fontawesome.com/95df101b02.js" crossorigin="anonymous"></script>	
   <link rel="icon" href="images/3r-ideas2.png">
+
 </head>
 <body>	
   <header class="flex-header">
@@ -62,16 +63,16 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active carouselFotos">
-          <img src="images/hands-plant2.jpg" class="d-block">
-          <div class="carousel-caption d-none d-md-block carousel-frase">
-            <p class="text-dark"><strong>Repensar para reducir tu impacto ambiental</strong></p>
-          </div>          
+          <img src="images/hands-plant.jpg" class="d-block">
+          <div class="d-md-block carousel-frase">
+            <p><strong>Repensar para reducir tu impacto ambiental.</strong></p>
+          </div>
         </div>
         <div class="carousel-item carouselFotos">
-          <img src="images/forest.jpg" class="d-block">
-          <div class=" carousel-caption d-none d-md-block carousel-frase">
-            <p class="text-white"><strong>Comunicar para motivar y transformar</strong></p>
-          </div> 
+          <img src="images/forest3.jpg" class="d-block">
+          <div class="d-md-block carousel-frase">
+            <p class="text-light"><strong>Comunicar para motivar y transformar.</strong></p>
+          </div>
         </div>
       </div>
     </div>  
