--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
       </div>
       <div id="indexDerecha">   
         <p>Creemos en el poder de las <strong>personas</strong> para <strong>transformar</strong> las organizaciones.</p>
-        <p>Creemos en los <strong>emprendedores</strong> como <strong>agentes de cambio</strong> y creadores de soluciones a los grandes problemas sociales y ambientales del presente y del futuro.</p>
+        <p class="parrafoResponsive">Creemos en los <strong>emprendedores</strong> como <strong>agentes de cambio</strong> y creadores de soluciones a los grandes problemas sociales y ambientales del presente y del futuro.</p>
         <p>Creemos en el valor y el poder de la <strong>articulación</strong> y la <strong>cooperación</strong> entre organizaciones, empresas y emprendedores.</p>
-        <p>Creemos que las <strong>empresas del futuro</strong> deben tener la sostenibilidad incorporada en su ADN.</p>
+        <p class="parrafoResponsive">Creemos que las <strong>empresas del futuro</strong> deben tener la sostenibilidad incorporada en su ADN.</p>
         <p>Trabajamos con <strong>innovación</strong>, <strong>desarrollo sostenible</strong> y <strong>economía circular</strong> como pilares.</p>
       </div>  
     </div>        
