--- a/nosotros.html
+++ b/nosotros.html
@@ -43,7 +43,7 @@
                 <a href="https://twitter.com/3rideas" class="nav-link"><i class="fab fa-twitter-square text-secondary fa-lg header-redes"></i></a>
               </li>
               <li class="nav-item">
-                <a href="https://www.linkedin.com/company/3r-ideas" class="nav-link"><i class="fab fa-linkedin text-secondary fa-lg header-redes"></i></a>
+                <a href="https://www.linkedin.com/company/3r-ideas" class="nav-link"><i class="fab fa-linkedin text-secondary fa-lg header-redes" id="linkedin"></i></a>
               </li>
     			</ul>
 			</div>
