--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active carouselFotos">
-          <img src="images/hands-plant.jpg" class="d-block">
+          <img src="images/hands-plant1.jpg" class="d-block">
           <div class="d-md-block carousel-frase">
             <p><strong>Repensar para reducir tu impacto ambiental.</strong></p>
           </div>
         </div>
         <div class="carousel-item carouselFotos">
-          <img src="images/forest3.jpg" class="d-block">
+          <img src="images/forest2.jpg" class="d-block">
           <div class="d-md-block carousel-frase">
             <p class="text-light"><strong>Comunicar para motivar y transformar.</strong></p>
           </div>
@@ -137,7 +137,7 @@
       </div>     
     </div>     	
     <div id="derechos">
-			<p class="text-dark text-center" id="derechosP">Todos los derechos reservados &copy; 2020. Diseñado por <strong>Manuel Lacarra</strong></p>
+			<p class="text-dark text-center" id="derechosP">&copy; Copyright 2020 3R IDEAS I Todos los derechos reservados I Diseño y desarrollo <strong>Manuel Lacarra</strong></p>
 		</div>				  
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
