--- a/nosotros.html
+++ b/nosotros.html
@@ -63,7 +63,7 @@
             <p class="trabajamos">Trabajamos para llevar la sustentabilidad al corazón de las organizaciones y transformarlas.</p>
             <p>Acompañamos a las organizaciones a <strong>repensar y replantear</strong> los procesos en cada una de las etapas de su cadena de valor para <strong>reducir</strong> su impacto ambiental.</p>
             <p>Desarrollamos <strong>estrategias, programas de sustentabilidad, proyectos de triple impacto</strong> y los ayudamos a llegar de la mejor manera a cada uno de sus públicos.</p>
-            <p class="trabajamos">Trabajamos con <strong>innovación, desarrollo sostenible y economía circular</strong> como pilares.</p>
+            <p class="trabajamos-2">Trabajamos con <strong>innovación, desarrollo sostenible y economía circular</strong> como pilares.</p>
           </div>
         </div> 
       </div>  
