--- a/contacto.html
+++ b/contacto.html
@@ -64,26 +64,7 @@
           <label class="formulario label">Mensaje <strong>*</strong></label>
 					<textarea id="comentario" name="comments" placeholder="" class="formulario" required></textarea>
 					<div>
-						<button class="boton formulario btn btn-light border border-dark w-25 p-2" data-toggle="modal" data-target="#exampleModal" role="button" type="button submit">Enviar</button>
-							<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  								<div class="modal-dialog">
-    								<div class="modal-content">
-      									<div class="modal-header">
-        									<h2 class="modal-title" id="exampleModalLabel">Hemos recibido tu consulta. </h5>
-        									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          										<span aria-hidden="true">&times;</span>
-        									</button>
-      									</div>
-      									<div class="modal-body">
-        								<p>Nos pondremos en contacto a la brevedad.</p>
-                        <p>Muchas gracias.</p>
-      									</div>
-      									<div class="modal-footer">
-        									<button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
-      									</div>
-   									</div>
-  								</div>
-							</div>
+						<button class="boton formulario btn btn-light border border-dark w-25 p-2" role="button" type="button submit">Enviar</button>
           </div>
         </form>		
       </div> 
