--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="gridIndexServiciosDerecha">
         <a href="servicios.html#seccionComunicacion"><img src="images/shout.png" class="imagenesIndexServicios" id="comu-impacto"></a>
         <h3 class="tituloIndexServicios"><strong>Comunicación de Impacto</strong></h3>
-        <p class="parrafoIndexServicios">Te ayudamos a comunicar lo que tu empresa dice y hace, de manera estratégica, con una imagen profesional y adaptada a cada uno de tus públicos, para que el mensaje llegue de forma adecuada y logre el impacto deseado.</p>
+        <p class="parrafoIndexServicios1">Te ayudamos a comunicar lo que tu empresa dice y hace, de manera estratégica, con una imagen profesional y adaptada a cada uno de tus públicos, para que el mensaje llegue de forma adecuada y logre el impacto deseado.</p>
       </div>    
     </div>
   </section>
