--- a/contacto.html
+++ b/contacto.html
@@ -57,14 +57,14 @@
 					<input class="formulario" type="Text" name="Name" required>
           <label class="formulario label">Email <strong>*</strong></label>
 					<input class="formulario" type="email" name="mail" required>
-          <label class="formulario label flexOpcional">Organización <p class="text-muted">(opcional)</p></label> 
+          <label class="formulario label">Organización</label> 
           <input class="formulario" type="Text" name="organization">
-          <label class="formulario label flexOpcional">Asunto <p class="text-muted">(opcional)</p></label>   
+          <label class="formulario label">Asunto</label>   
 					<input class="formulario" type="Text" name="subject">
           <label class="formulario label">Mensaje <strong>*</strong></label>
 					<textarea id="comentario" name="comments" placeholder="" class="formulario" required></textarea>
 					<div>
-						<button class="boton formulario btn btn-light border border-dark w-25 p-2" role="button" type="button submit">Enviar</button>
+						<button class="boton formulario btn btn-light border border-dark" role="button" type="button submit">Enviar</button>
           </div>
         </form>		
       </div> 
