--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active carouselFotos">
-          <img src="images/hands-plant1.jpg" class="d-block">
+          <img src="images/water-hands2.jpg" class="d-block">
           <div class="d-md-block carousel-frase">
-            <p><strong>Repensar para reducir tu impacto ambiental.</strong></p>
+            <p class="text-dark"><strong>Repensar para reducir tu impacto ambiental.</strong></p>
           </div>
         </div>
         <div class="carousel-item carouselFotos">
-          <img src="images/forest2.jpg" class="d-block">
+          <img src="images/forest.jpg" class="d-block">
           <div class="d-md-block carousel-frase">
             <p class="text-light"><strong>Comunicar para motivar y transformar.</strong></p>
           </div>
@@ -84,7 +84,7 @@
         <p>Trabajamos con <strong>innovación</strong>, <strong>desarrollo sostenible</strong> y <strong>economía circular</strong> como pilares.</p>
       </div>  
     </div>        
-    <p id="creamos">Creamos <strong>círculos virtuosos</strong> donde todos los involucrados se convierten en <strong>actores sociales comprometidos y responsables</strong> con el ambiente y sus stakeholders.</p>
+      <p id="creamos">Creamos <strong>círculos virtuosos</strong> donde todos los involucrados se convierten en <strong>actores sociales comprometidos y responsables</strong> con el ambiente y sus stakeholders.</p>
   </section>		 	 
 	<section>
     <div class="nuestrosServicios1">
@@ -98,8 +98,8 @@
       </div>
       <div class="gridIndexServiciosCentro">
         <a href="servicios.html#seccionCapacitaciones"><img src="images/training.png" class="imagenesIndexServicios"></a>
-        <h3 class="tituloIndexServicios"><strong>Capacitaciones</strong></h3>
-        <p class="parrafoIndexServicios">Te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que puedan incorporar la sustentabilidad, el cuidado de los recursos, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p>
+        <h3 class="tituloIndexServicios"><strong>Eventos y Capacitaciones</strong></h3>
+        <p class="parrafoIndexServicios">Desarrollamos eventos con propósito y te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que puedan incorporar la sustentabilidad, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p>
       </div>
       <div class="gridIndexServiciosDerecha">
         <a href="servicios.html#seccionComunicacion"><img src="images/shout.png" class="imagenesIndexServicios" id="comu-impacto"></a>
