--- a/nosotros.html
+++ b/nosotros.html
@@ -55,7 +55,8 @@
         <h1 id="nosotros"><strong>Sobre nosotros</strong></h1>
         <div class="grid-parrafo">
           <div id="p-izquierda">
-            <p><strong>3R Ideas</strong> es una <strong>Consultora de Sustentabilidad y Comunicación</strong> nacida de la pasión y el compromiso de sus directores por construir un mundo mejor, ambiental y socialmente equilibrado.</p>
+            <p class="trabajamos">En 3R Ideas trabajamos para llevar la sustentabilidad al corazón de las organizaciones y transformarlas.</p>
+            <p>Somos una <strong>Consultora de Sustentabilidad y Comunicación</strong> nacida de la pasión y el compromiso de sus directores por construir un mundo mejor, ambiental y socialmente equilibrado.</p>
             <p>Creemos en el poder de las personas para <strong>transformar las organizaciones</strong>. Por eso trabajamos con los distintos niveles de colaboradores para diseñar, proyectar y comunicar los cambios que cada una necesita.</p>
             <p>Impulsamos un <strong>cambio de visión</strong> para poner la <strong>sustentabilidad como punto de partida</strong> y motor a la hora de pensar los proyectos, seleccionar materias primas y proveedores, definir y realizar procesos, y vincularse con sus distintos públicos.</p>
          </div>
@@ -73,7 +74,7 @@
     		<h2>Juan Manuel Chaname Ciuró Roqué</h2>
     		  <h3 class="text-muted">Fundador y Director</h3> 		  	
     		<img class="directores" src="images/juan-manuel.jpg" alt="juan-manuel" id="juan-manuel">
-    		<p>Es un emprendedor en permanente aprendizaje, con formación en Diseño Industrial y un Posgrado en Ingeniería de Plásticos. Es Project Manager, especialista en gestión y dirección de proyectos. Trabajó en desarrollo de productos con ADN sustentable en China, Alemania e Italia. Se desempeña actualmente como Mentor para emprendimientos de impacto social, ambiental y económico.</p>  
+    		<p>Es Project Manager, especialista en gestión y dirección de proyectos integrales, con formación en Diseño Industrial y un Posgrado en Ingeniería de Plásticos. Trabajó en desarrollo de productos con ADN sustentable en China, Alemania e Italia. Posteriormente funda 3R IDEAS. Hoy trabaja en la alfabetización del cuidado al medioambiente con un mix de tecnología, creatividad e innovación como pilares. Es Director de Planificación y Proyectos de Green Drinks Buenos Aires y se desempeña como Mentor para emprendimientos de impacto social, ambiental y económico.</p>  
     	</div>
       <div id="nosotros-derecha">
     		<h2>Vanina Estrugo
