--- a/servicios.html
+++ b/servicios.html
@@ -56,12 +56,12 @@
                     <a href="servicios.html#seccionEstrategia"><img src="images/graph.png" class="imagenesIndexServicios1"></a>
                 </div>
                 <div class="gridIndexServiciosCentro1">
-                    <h3 class="tituloIndexServicios1"><strong>Capacitaciones</strong></h3>
+                    <h3 class="tituloIndexServicios1"><strong>Eventos y Capacitaciones</strong></h3>
                     <a href="servicios.html#seccionCapacitaciones"><img src="images/training.png" class="imagenesIndexServicios1"></a>
                 </div>
                 <div class="gridIndexServiciosDerecha1">
                     <h3 class="tituloIndexServicios1"><strong>Comunicación de Impacto</strong></h3>
-                    <a href="servicios.html#seccionComunicacion"><img src="images/shout.png" class="imagenesIndexServicios2"></a>
+                    <a href="servicios.html#seccionComunicacion"><img src="images/shout.png" class="imagenesIndexServicios1"></a>
                 </div> 
             </div>
         </div>           
@@ -78,7 +78,7 @@
                         <li>Estrategias y Programas de Sustentabilidad. </li>
                         <li>Programas de Gestión Integral de Residuos.</li>
                         <li>Formulación de proyectos de Economía Circular y Triple Impacto.</li>
-                        <li>Implementación de Objetivos de Desarrollo Sostenible.</li>
+                        <li>Implementación de Objetivos de Desarrollo Sostenible de la ONU.</li>
                         <li>Certificación como Empresa B y otras certificaciones argentinas.</li>
                         <li>Desarrollo de proyectos público-privado.</li>
                         <li>Consultoría en Negocios.</li>
@@ -91,20 +91,21 @@
             </div>   
         </div>
         <div id="seccionCapacitaciones">
-            <h2 id="capacitaciones"><strong>Capacitaciones</strong></h2>
+            <h2 id="capacitaciones"><strong>Eventos y Capacitaciones</strong></h2>
             <div class="grid-capacitaciones">
-                <div id="grid-capacitaciones-izquierda">
-                    <p class="text-dark">Te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que puedan incorporar la sustentabilidad, el cuidado de los recursos, la economía circular y la conciencia ambiental como parte de su accionar cotidiano. </p>
+                <div  id="grid-capacitaciones-izquierda">
+                    <img src="images/presentation.png" class="fotos-servicios img-fluid" id="ilus-capacitaciones">
+                </div> 
+                <div id="grid-capacitaciones-derecha">
+                    <p class="text-dark">Desarrollamos eventos con propósito y te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que puedan incorporar la sustentabilidad, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p>
                     <ul class="text-dark">
+                        <li>Eventos de sustentabilidad.</li>
                         <li>Talleres de concientización ambiental.</li>
                         <li>Charlas de Economía Circular.</li>
                     </ul>
-                </div>   
-                <div  id="grid-capacitaciones-derecha">
-                    <img src="images/presentation.png" class="fotos-servicios img-fluid" id="ilus-capacitaciones">
-                </div>         
+                </div>              
             </div> 
-            <div class="consultanos2">
+            <div class="consultanos">
               <a href="contacto.html"><button type="button" class="btn btn-light">Consultanos</button></a>     
             </div>            
         </div>
@@ -120,6 +121,9 @@
                         <li>Estrategias de comunicación.</li>
                         <li>Desarrollo de contenido.</li>
                         <li>Edición y Corrección de textos.</li>
+                        <li>Comunicación digital.</li>
+                        <li>Community Management.</li>
+                        <li>Marketing Digital.</li>
                         <li>Branding e Identidad Corporativa.</li>
                         <li>Diseño y desarrollo web.</li>
                         <li>Diseño gráfico.</li>
