--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </div>
         </div>
         <div class="carousel-item carouselFotos">
-          <img src="images/forest.jpg" class="d-block">
+          <img src="images/forest2.jpg" class="d-block">
           <div class="d-md-block carousel-frase">
             <p class="text-light"><strong>Comunicar para motivar y transformar.</strong></p>
           </div>
