--- a/servicios.html
+++ b/servicios.html
@@ -72,18 +72,16 @@
                     <img src="images/plan-illustration.png" class="fotos-servicios img-fluid">   
                 </div>
                 <div id="grid-estrategia-derecha">
-                    <p>Te acompañamos a repensar en cada una de las etapas de la cadena de valor de tu empresa, para redefinir las formas, procesos, materiales e incorporar nuevos actores con los cuales llevarlos a cabo. Trabajamos para que puedan incorporar una nueva visión del mundo y cómo llevar adelante los proyectos.</p>
-                    <ul class="text-dark">
-                        <li>Consultoría y Auditoría en  Sustentabilidad.</li>
-                        <li>Estrategias y Programas de Sustentabilidad. </li>
-                        <li>Programas de Gestión Integral de Residuos.</li>
-                        <li>Formulación de proyectos de Economía Circular y Triple Impacto.</li>
-                        <li>Implementación de Objetivos de Desarrollo Sostenible de la ONU.</li>
-                        <li>Certificación como Empresa B y otras certificaciones argentinas.</li>
-                        <li>Desarrollo de proyectos público-privado.</li>
-                        <li>Consultoría en Negocios.</li>
-                        <li>Alianzas Estratégicas.</li>
-                    </ul>
+                    <p class="text-dark mb-4">Te acompañamos a repensar en cada una de las etapas de la cadena de valor de tu empresa, para redefinir las formas, procesos, materiales e incorporar nuevos actores con los cuales llevarlos a cabo. Trabajamos para que puedan incorporar una nueva visión del mundo y cómo llevar adelante los proyectos.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Consultoría y Auditoría en  Sustentabilidad.</p>                  
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Estrategias y Programas de Sustentabilidad. </p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Programas de Gestión Integral de Residuos.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Formulación de proyectos de Economía Circular y Triple Impacto.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Implementación de Objetivos de Desarrollo Sostenible de la ONU.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Certificación como Empresa B y otras certificaciones argentinas.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Desarrollo de proyectos público-privado.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Consultoría en Negocios.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Alianzas Estratégicas.</p>
                 </div>                   
             </div>
             <div class="consultanos">
@@ -97,12 +95,10 @@
                     <img src="images/presentation.png" class="fotos-servicios img-fluid" id="ilus-capacitaciones">
                 </div> 
                 <div id="grid-capacitaciones-derecha">
-                    <p class="text-dark">Desarrollamos eventos con propósito y te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que puedan incorporar la sustentabilidad, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p>
-                    <ul class="text-dark">
-                        <li>Eventos de sustentabilidad.</li>
-                        <li>Talleres de concientización ambiental.</li>
-                        <li>Charlas de Economía Circular.</li>
-                    </ul>
+                    <p class="text-dark mb-4">Desarrollamos eventos con propósito y te acompañamos en la capacitación de tus recursos y tus públicos objetivos para que puedan incorporar la sustentabilidad, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Eventos de sustentabilidad.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Talleres de concientización ambiental.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Charlas de Economía Circular.</p>
                 </div>              
             </div> 
             <div class="consultanos">
@@ -116,22 +112,20 @@
                     <img src="images/social-girl.png" class="img-fluid" id="hashtagg">
                 </div>
                 <div id="grid-comunicacion-derecha">
-                    <p class="text-dark">Te ayudamos a comunicar lo que tu empresa dice y hace, de manera estratégica, con una imagen profesional y adaptada a cada uno de tus públicos, para que el mensaje llegue de forma adecuada y logre el impacto deseado.</p>
-                    <ul class="text-dark">
-                        <li>Estrategias de comunicación.</li>
-                        <li>Desarrollo de contenido.</li>
-                        <li>Edición y Corrección de textos.</li>
-                        <li>Comunicación digital.</li>
-                        <li>Community Management.</li>
-                        <li>Marketing Digital.</li>
-                        <li>Branding e Identidad Corporativa.</li>
-                        <li>Diseño y desarrollo web.</li>
-                        <li>Diseño gráfico.</li>
-                        <li>Animaciones.</li>
-                        <li>Ilustración.</li>
-                        <li>Fotografía publicitaria y de producto.</li>
-                        <li>Producción audiovisual.</li>
-                    </ul>
+                    <p class="text-dark mb-4">Te ayudamos a comunicar lo que tu empresa dice y hace, de manera estratégica, con una imagen profesional y adaptada a cada uno de tus públicos, para que el mensaje llegue de forma adecuada y logre el impacto deseado.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Estrategias de comunicación.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Desarrollo de contenido.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Edición y Corrección de textos.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Comunicación digital.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Community Management.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Marketing Digital.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Branding e Identidad Corporativa.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Diseño y desarrollo web.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Diseño gráfico.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Animaciones.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Ilustración.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Fotografía publicitaria y de producto.</p>
+                    <p class="p-servicios text-dark"><img src="images/hoja.png" class="hoja">Producción audiovisual.</p>
                 </div>
             </div>
             <div class="consultanos">
