--- a/index.html
+++ b/index.html
@@ -90,7 +90,42 @@
     <div class="nuestrosServicios1">
       <h2 id="nuestrosServicios2"><strong>Nuestros servicios</strong></h2>
     </div>
-    <div class="gridIndexServicios">
+    <div class="d-flex">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="images/graph.png" alt="Avatar" style="width:200px;height:200px; margin-top: 20px;">
+          </div>
+          <div class="flip-card-back">
+            <h1><strong>Estrategia y Gestión</strong></h1> 
+            <a href="servicios.html"><p>Te acompañamos a repensar en cada una de las etapas de la cadena de valor de tu empresa, para   redefinir las formas, procesos, materiales e incorporar nuevos actores con los cuales llevarlos a cabo. Trabajamos para que   puedan incorporar una nueva visión del mundo y cómo llevar adelante los proyectos.</p></a>  
+          </div>  
+        </div>  
+      </div>  
+      <div class="flip-card"> 
+        <div class="flip-card-inner"> 
+          <div class="flip-card-front "> 
+              <img src="images/training.png" alt="Avatar" style="width:200px;height:200px; margin-top: 20px;">  
+          </div>  
+          <div class="flip-card-back">  
+              <h1><strong>Eventos y Capacitaciones</strong></h1>  
+              <a href="servicios.html"><p>Desarrollamos eventos con propósito y te acompañamos en la capacitación de tus recursos y tus   públicos objetivos para que puedan incorporar la su stentabilidad, la economía circular y la conciencia ambiental como parte de su accionar cotidiano.</p></a>   
+          </div>  
+        </div>
+      </div>
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="images/shout.png" alt="Avatar" style="width:200px;height:200px; margin-top: 20px;">
+          </div>
+          <div class="flip-card-back">
+            <h1><strong>Comunicación de Impacto</strong></h1> 
+            <a href="servicios.html"><p>Te ayudamos a comunicar lo que tu empresa dice y hace, de manera estratégica, con una imagen  profesional y adaptada a cada uno de tus públicos, para que el mensaje llegue de forma adecuada y logre el impacto deseado.</p></a>  
+          </div>  
+        </div>
+      </div>
+    </div>
+    <!--<div class="gridIndexServicios">
       <div class="gridIndexServiciosIzquierda">
         <a href="servicios.html"><img src="images/graph.png" class="imagenesIndexServicios"></a>
         <h3 class="tituloIndexServicios"><strong>Estrategia y Gestión</strong></h3>
@@ -106,7 +141,7 @@
         <h3 class="tituloIndexServicios"><strong>Comunicación de Impacto</strong></h3>
         <p class="parrafoIndexServicios1">Te ayudamos a comunicar lo que tu empresa dice y hace, de manera estratégica, con una imagen profesional y adaptada a cada uno de tus públicos, para que el mensaje llegue de forma adecuada y logre el impacto deseado.</p>
       </div>    
-    </div>
+    </div>-->
   </section>
 	<footer>
 		<div class="container footer-grid">
